2004-03-07  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/ja_JP.ujis: Move to ja_JP.eucJP
	* doc/C/timidity.cfg.5, doc/ja_JP.eucJP/timidity.cfg.5: Update

2004-03-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c (select_play_sample):
	  Fix handling of resample cache in case of using MTS

2004-03-06  Saito <saito@intaa.net>

	* timidity/playmidi.c, timidity/readmidi.c, timidity/reverb.[ch],
	  timidity/effect.c, timidity/mix.c:
	  Support for XG variation effect:
	  Echo, Symphonic(incomplete), Celeste, 2-Band EQ, 3-Band EQ.
	  Fix around envelope.

2004-03-05  Saito <saito@intaa.net>

	* timidity/sndfont.c:
	  Fix for Soundfonts with strange loop points.
	* timidity/playmidi.c, timidity/readmidi.[ch], timidity/reverb.[ch]:
	  Support for XG variation effect:
	  Delay L,C,R, Delay L,R, Cross Delay.

2004-03-05  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/w32g_pref.c, interface/w32g_res.{h,rc}:
	  Change to fit with initial keysig option behavior (W32GUI version)
	* doc/ja_JP.ujis/Makefile.{am,in}, doc/ja_JP.ujis/README.alsaseq:
	  Add README.alsaseq in Japanese

2004-03-04  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c: Small fixes.

2004-03-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c (parse_opt_Z1): Fix typo
	* interface/alsaseq_c.c, interface/rtsyn_common.c,
	  interface/w32g_pref.c, timidity/playmidi.c:
	  Change behavior so that keysig control may not react
	  when initial keysig option for pure intonation is specified

2004-03-04  mput <root@mput.dip.jp>

	* timidity/readmidi.c (set_xg_chorus_type): Re-activate flanger

2004-03-04  mput <root@mput.dip.jp>

	* timidity/reverb.h: Fix undeclared type error

2004-03-03  Saito <saito@intaa.net>

	* timidity/reverb.[ch], timidity/playmidi.c, timidity/readmidi.[ch]:
	  Under construction for XG insertion / variation / system effects.

2004-03-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/recache.c: Beautify (functionally no change)
