@@ -6,6 +6,27 @@
 # element name is the name of a command and the value is
 # a script that loads the command.
 
+set auto_index(filebrowser) [list source [file join $dir browser.tcl]]
+set auto_index(fs:init) [list source [file join $dir browser.tcl]]
+set auto_index(fs:init-lbox) [list source [file join $dir browser.tcl]]
+set auto_index(fs:get-cur-lbox) [list source [file join $dir browser.tcl]]
+set auto_index(fs:select) [list source [file join $dir browser.tcl]]
+set auto_index(fs:selall) [list source [file join $dir browser.tcl]]
+set auto_index(fs:updir) [list source [file join $dir browser.tcl]]
+set auto_index(fs:changedir) [list source [file join $dir browser.tcl]]
+set auto_index(fs:update) [list source [file join $dir browser.tcl]]
+set auto_index(retrieve-filename) [list source [file join $dir misc.tcl]]
+set auto_index(sec2time) [list source [file join $dir misc.tcl]]
+set auto_index(numeric-bind) [list source [file join $dir misc.tcl]]
+set auto_index(my-listbox) [list source [file join $dir misc.tcl]]
+set auto_index(my-dialog) [list source [file join $dir misc.tcl]]
+set auto_index(warning) [list source [file join $dir misc.tcl]]
+set auto_index(error) [list source [file join $dir misc.tcl]]
+set auto_index(information) [list source [file join $dir misc.tcl]]
+set auto_index(question) [list source [file join $dir misc.tcl]]
+set auto_index(rootname) [list source [file join $dir misc.tcl]]
+set auto_index(my-random) [list source [file join $dir misc.tcl]]
+set auto_index(init-random) [list source [file join $dir misc.tcl]]
 set auto_index(InitGlobal) [list source [file join $dir tkpanel.tcl]]
 set auto_index(HandleInput) [list source [file join $dir tkpanel.tcl]]
 set auto_index(MakeShuffleList) [list source [file join $dir tkpanel.tcl]]
@@ -39,24 +60,3 @@ set auto_index(OpenFiles) [list source [file join $dir tkpanel.tcl]]
 set auto_index(CloseFiles) [list source [file join $dir tkpanel.tcl]]
 set auto_index(ToggleCurFileMode) [list source [file join $dir tkpanel.tcl]]
 set auto_index(CreateWindow) [list source [file join $dir tkpanel.tcl]]
-set auto_index(filebrowser) [list source [file join $dir browser.tcl]]
-set auto_index(fs:init) [list source [file join $dir browser.tcl]]
-set auto_index(fs:init-lbox) [list source [file join $dir browser.tcl]]
-set auto_index(fs:get-cur-lbox) [list source [file join $dir browser.tcl]]
-set auto_index(fs:select) [list source [file join $dir browser.tcl]]
-set auto_index(fs:selall) [list source [file join $dir browser.tcl]]
-set auto_index(fs:updir) [list source [file join $dir browser.tcl]]
-set auto_index(fs:changedir) [list source [file join $dir browser.tcl]]
-set auto_index(fs:update) [list source [file join $dir browser.tcl]]
-set auto_index(retrieve-filename) [list source [file join $dir misc.tcl]]
-set auto_index(sec2time) [list source [file join $dir misc.tcl]]
-set auto_index(numeric-bind) [list source [file join $dir misc.tcl]]
-set auto_index(my-listbox) [list source [file join $dir misc.tcl]]
-set auto_index(my-dialog) [list source [file join $dir misc.tcl]]
-set auto_index(warning) [list source [file join $dir misc.tcl]]
-set auto_index(error) [list source [file join $dir misc.tcl]]
-set auto_index(information) [list source [file join $dir misc.tcl]]
-set auto_index(question) [list source [file join $dir misc.tcl]]
-set auto_index(rootname) [list source [file join $dir misc.tcl]]
-set auto_index(my-random) [list source [file join $dir misc.tcl]]
-set auto_index(init-random) [list source [file join $dir misc.tcl]]
